authentication lga di

--- a/styles.css
+++ b/styles.css
@@ -98,3 +98,13 @@ body{
   font-weight: 900;
   display: none;
 }
+.alert2{
+  width: 100%;
+  background: rgb(255, 0, 0);
+  padding: 10px 20px;
+  border-radius: 5px;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 900;
+  display: none;
+}
